Commit 5 - Fixed video text spacing error and video box spacing error :)

--- a/style.css
+++ b/style.css
@@ -18,6 +18,24 @@ img {
 
 
 
+.page-title-box {
+    font-family:Brush Script MT; 
+    font-size: 30px;
+    margin: 0%;
+    /* padding: 0%;
+    border: 0%;
+    text-decoration: none; */
+    color: white;
+}
+
+
+
+.page-title-box p {
+    margin: 20px;
+}
+
+
+
 .image-box {
     border-radius: 20px;
     margin: 20px;
@@ -40,6 +58,12 @@ body {
 
 
 
+p {
+    margin: 0px;
+}
+
+
+
 .heading-box {
     width: 100%;
     /* margin : -0.4%; 
@@ -53,7 +77,7 @@ body {
 
 
 .main-boxes {
-    margin : 10px ;
+    margin: 0 0 30px 0;
     padding: 2px;
     /* padding : 10px; */
     /* background-color : rgb(169, 169, 169) ; */
@@ -92,7 +116,7 @@ body {
 .smaller-text {
     font-family:Brush Script MT; 
     font-size: 30px;
-    margin: 0%;
+    /* margin: 0%; */
     /* padding: 0%;
     border: 0%;
     text-decoration: none; */
